--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=BonafideGenerator
+
 # Server Configuration
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:student;
+# Database Configuration (Use File-Based H2 Instead of In-Memory)
+spring.datasource.url=jdbc:h2:file:./data/bonafide_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=nb
 spring.datasource.password=1234
@@ -11,25 +13,37 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.data.jpa=DEBUG
-logging.level.org.hibernate=DEBUG
+# Reduce Logging to Prevent High Memory Consumption
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.data.jpa=INFO
+logging.level.org.hibernate=INFO
+
+# Enable H2 Console (For Debugging)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.transaction=TRACE
+# Optimize Hibernate Logging
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.springframework.transaction=INFO
 
+# Set Base URL for the App
 base_url=https://bonafidegenerator.up.railway.app
 
+# Optimize CORS Settings
 spring.web.cors.allowed-origins=https://bonafidegenerator.up.railway.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+spring.web.cors.allowed-headers=Authorization,Content-Type
 spring.web.cors.allow-credentials=true
 
-management.security.enabled=true  
-management.security.roles=ADMIN  
+# Management & Security (Optimized for Spring Boot 2.7+)
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Spring Security Configuration (Fixed Typo)
 security.basic.enabled=true  
 security.user.name=admin  
-security.user.passowrd=admin  
+security.user.password=admin  
+
+# Set JVM Memory Limits to Prevent OOM
+JAVA_TOOL_OPTIONS=-Xms128m -Xmx256m
